--- a/ServicuerosSA/Views/Shared/_Layout.cshtml
+++ b/ServicuerosSA/Views/Shared/_Layout.cshtml
@@ -32,29 +32,35 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li><a asp-area="" asp-controller="Proveedores" asp-action="Index">Proveedores</a></li>
+                    @if (User.IsInRole("Admin") || User.IsInRole("Secre"))
+                    {
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown">
+                                Personal <b class="caret"></b>
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li><a asp-area="" asp-controller="Personales" asp-action="Index">Personal</a></li>
+                                <li class="divider"></li>
+                                <li><a asp-area="" asp-controller="Sexos" asp-action="Index">Sexo</a></li>
+                                <li class="divider"></li>
 
-                    <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown">
-                            Personal <b class="caret"></b>
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li><a asp-area="" asp-controller="Personales" asp-action="Index">Personal</a></li>
-                            <li class="divider"></li>
-                            <li><a asp-area="" asp-controller="Sexos" asp-action="Index">Sexo</a></li>
-                            <li class="divider"></li>
-
-                        </ul>
-                    </li>
+                            </ul>
+                        </li>
+                    }
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown">
                             Proceso <b class="caret"></b>
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a asp-area="" asp-controller="Lotes" asp-action="Index">1.- Ingreso de Lotes</a></li>
-                            <li class="divider"></li>
-                            <li><a asp-area="" asp-controller="BodegaClasificaciones" asp-action="Index">2.- Clasificación Pelo</a></li>
-                            <li class="divider"></li>
-                            <li><a asp-area="" asp-controller="Pelambres" asp-action="Index">3.- Pelambre</a></li>
+                            @if (User.IsInRole("Admin") || User.IsInRole("Secre"))
+                            {
+                                <li><a asp-area="" asp-controller="Lotes" asp-action="Index">1.- Ingreso de Lotes</a></li>
+                            
+                                <li class="divider"></li>
+                                <li><a asp-area="" asp-controller="BodegaClasificaciones" asp-action="Index">2.- Clasificación Pelo</a></li>
+                                <li class="divider"></li>
+                                <li><a asp-area="" asp-controller="Pelambres" asp-action="Index">3.- Pelambre</a></li>
+                            }
                             <li class="divider"></li>
                             <li><a asp-area="" asp-controller="Descarnes" asp-action="Index">4.- Descarne</a></li>
                             <li class="divider"></li>
@@ -62,39 +68,45 @@
                             <li class="divider"></li>
                         </ul>
                     </li>
-                    <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown">
-                            Administracion <b class="caret"></b>
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li><a asp-area="" asp-controller="Bodegas" asp-action="Index">Bodegas</a></li>
-                            <li class="divider"></li>
-                            <li><a asp-area="" asp-controller="TipoPiels" asp-action="Index">Tipos de Pieles</a></li>
-                            <li class="divider"></li>
-                            <li><a asp-area="" asp-controller="Clasificaciones" asp-action="Index">Clasificaciones</a></li>
-                            <li class="divider"></li>
-                            <li><a asp-area="" asp-controller="Bombos" asp-action="Index">Bombos</a></li>
-                            <li class="divider"></li>
-                            <li><a asp-area="" asp-controller="Medidas" asp-action="Index">Medidas</a></li>
-                            <li class="divider"></li>
-                            <li><a asp-area="" asp-controller="BodegaTripas" asp-action="Index">Bodega Tripa</a></li>
-                            <li class="divider"></li>
-                            <li><a asp-area="" asp-controller="Tipobodegas" asp-action="Index">Tipo de Bodegas</a></li>
-                            <li class="divider"></li>
-                        </ul>
-                    </li>
-                    <li class="dropdown">   
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown">
-                            Formulas<b class="caret"></b>
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li><a asp-area="" asp-controller="Formulas" asp-action="Index">Formulas</a></li>
-                            <li class="divider"></li>
-                            <li><a asp-area="" asp-controller="Componentes" asp-action="Index">Componentes de Formulas</a></li>
-                            <li class="divider"></li>
-                        </ul>
-                    </li>
-                </ul>
+                    @if (User.IsInRole("Admin") || User.IsInRole("Secre"))
+                    {
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown">
+                                Administracion <b class="caret"></b>
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li><a asp-area="" asp-controller="Bodegas" asp-action="Index">Bodegas</a></li>
+                                <li class="divider"></li>
+                                <li><a asp-area="" asp-controller="TipoPiels" asp-action="Index">Tipos de Pieles</a></li>
+                                <li class="divider"></li>
+                                <li><a asp-area="" asp-controller="Clasificaciones" asp-action="Index">Clasificaciones</a></li>
+                                <li class="divider"></li>
+                                <li><a asp-area="" asp-controller="Bombos" asp-action="Index">Bombos</a></li>
+                                <li class="divider"></li>
+                                <li><a asp-area="" asp-controller="Medidas" asp-action="Index">Medidas</a></li>
+                                <li class="divider"></li>
+                                <li><a asp-area="" asp-controller="BodegaTripas" asp-action="Index">Bodega Tripa</a></li>
+                                <li class="divider"></li>
+                                <li><a asp-area="" asp-controller="Tipobodegas" asp-action="Index">Tipo de Bodegas</a></li>
+                                <li class="divider"></li>
+                            </ul>
+                        </li>
+                    }
+                    @if(User.IsInRole("Admin"))
+                    {
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown">
+                                Formulas<b class="caret"></b>
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li><a asp-area="" asp-controller="Formulas" asp-action="Index">Formulas</a></li>
+                                <li class="divider"></li>
+                                <li><a asp-area="" asp-controller="Componentes" asp-action="Index">Componentes de Formulas</a></li>
+                                <li class="divider"></li>
+                            </ul>
+                        </li>
+                    }
+                    </ul>
                 @await Html.PartialAsync("_LoginPartial")
             </div>
         </div>
@@ -109,7 +121,7 @@
 
     <environment include="Development">
 
-
+        
         <script src="~/lib/jquery/dist/jquery.js"></script>
         <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
         <script src="~/js/Lotes.js" asp-append-version="true"></script>
@@ -123,10 +135,7 @@
         
 
         <script src="~/js/Proveedor.js" asp-append-version="true"></script>
-        @*<<<<<<< HEAD
-
-        =======
-            >>>>>>> 292f87337ed4253ba8567ff061c18e80d58138ac*@
+      
         <script src="~/js/site.js" asp-append-version="true"></script>
     </environment>
     <environment exclude="Development">
