--- a/ServicuerosSA/Views/Account/Register.cshtml
+++ b/ServicuerosSA/Views/Account/Register.cshtml
@@ -26,6 +26,13 @@
                 <input asp-for="ConfirmPassword" class="form-control" />
                 <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
             </div>
+            <div class="form-group">
+                <label asp-for="Roles"></label>
+                <div class="col-md-10">
+                    @Html.DropDownList("Rol", new SelectList(Model.Roles,"Text","Text"), new { @class = "form-control"})
+                </div>
+                
+            </div>
             <button type="submit" class="btn btn-default">Register</button>
         </form>
     </div>
