--- a/ServicuerosSA/Views/Shared/_Layout.cshtml
+++ b/ServicuerosSA/Views/Shared/_Layout.cshtml
@@ -121,7 +121,7 @@
 
     <environment include="Development">
 
-        
+
         <script src="~/lib/jquery/dist/jquery.js"></script>
         <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
         <script src="~/js/Lotes.js" asp-append-version="true"></script>
@@ -132,10 +132,11 @@
         <script src="~/js/Clasificaciones.js" asp-append-version="true"></script>
         <script src="~/js/Bodega.js" asp-append-version="true"></script>
         <script src="~/js/Personal.js" asp-append-version="true"></script>
-        
+
 
         <script src="~/js/Proveedor.js" asp-append-version="true"></script>
-      
+        <script src="~/js/Descarne.js" asp-append-version="true"></script>
+
         <script src="~/js/site.js" asp-append-version="true"></script>
     </environment>
     <environment exclude="Development">
