--- a/ServicuerosSA/Views/Descarnes/Index.cshtml
+++ b/ServicuerosSA/Views/Descarnes/Index.cshtml
@@ -40,7 +40,7 @@
                 <form>
                     <div class="form-group">
                         <label class="control-label">Lotes en Pelambre</label>
-                        <select id="PelambreId" name="PelambreId" required class="form-control">
+                        <select id="PelambreId" name="PelambreId" required class="form-control" onchange="NumeroPielesPelambre();">
                             <option value="0">Seleccione una lo que desea descarnar</option>
                         </select>
                         <label id="mensajeb" class="col-md-2 control-label label-danger"></label>
