--- a/ServicuerosSA/Views/Descarnes/Index.cshtml
+++ b/ServicuerosSA/Views/Descarnes/Index.cshtml
@@ -23,6 +23,7 @@
     </thead>
     <tbody id="descarne"> </tbody>
 </table>
+
 <div class="modal fade" id="IngresoDescarne" tabindex="-1" role="dialog" aria-labelledby="EtiquetaModal">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
@@ -48,7 +49,8 @@
                     </div>
                     <div class="form-group">
                         <label class="control-label">Numero de pieles en Pelambre</label>
-                        <input id="descarne" name="descarne" readonly class="form-control">
+                        <label id="TotalPielesInput" name="TotalPielesInput" class="control-label"></label>
+
                     </div>
                     <div class="form-group">
                         <label class="control-label">Numero de pieles a Descarne</label>
