--- a/ServicuerosSA/Views/ClasificacionTripas/Index.cshtml
+++ b/ServicuerosSA/Views/ClasificacionTripas/Index.cshtml
@@ -1,5 +1,4 @@
-﻿@model IEnumerable<ServicuerosSA.Models.ClasificacionTripa>
-
+﻿
 @{
     ViewData["Title"] = "Index";
 }
@@ -8,28 +7,59 @@
 
 <p>
     <a asp-action="Create">Crear un nuevo</a>
+    <a href="#" class="btn btn-success" data-toggle="modal" data-target="#IngresoClasificacionTripa" onclick="listaBodegaTripa()">Nueva Clasificacion Tripa</a>
 </p>
 <table class="table">
     <thead>
         <tr>
-                <th>
-                    @Html.DisplayNameFor(model => model.Detalle)
-                </th>
+            <th>
+                Detalle
+            </th>
+            <th>
+                Numero Pieles
+            </th>
+            <th>
+                Activo
+            </th>
             <th></th>
         </tr>
     </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Detalle)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.ClasificacionTripaId">Editar</a> |
-                <a asp-action="Details" asp-route-id="@item.ClasificacionTripaId">Detalles</a> |
-                <a asp-action="Delete" asp-route-id="@item.ClasificacionTripaId">Eliminar</a>
-            </td>
-        </tr>
-}
-    </tbody>
+    <tbody id="clasiTripa"> </tbody>
 </table>
+<div class="modal fade" id="IngresoClasificacionTripa" tabindex="-1" role="dialog" aria-labelledby="EtiquetaModal">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close"
+                        data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+                <h4 class="modal-title"
+                    id="EtiquetaModal">
+                    Ingreso de Clasificacion en Tripa
+                </h4>
+            </div>
+            <div class="modal-body">
+                <form>
+                    <div class="form-group">
+                        <label class="control-label">Detalle</label>
+                        <label id="TotalPielesInput" name="Detalle" class="control-label alert alert-success hidden"></label>
+                    </div>
+                    <div class="form-group">
+                        <label class="control-label">Numero de pieles a Clasificar</label>
+                        <label id="TotalPielesInput" name="NumeroPieles" class="control-label alert alert-success hidden"></label>
+                    </div>
+                    <div class="form-group">
+                        <label class="control-label">Activo</label>
+                    </div>
+                  
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
+                <button type="button" class="btn btn-primary" onclick="GuardaDescarne()">Guardar</button>
+            </div>
+        </div>
+    </div>
+</div>
+
