--- a/ServicuerosSA/Views/Bodegatripas/Create.cshtml
+++ b/ServicuerosSA/Views/Bodegatripas/Create.cshtml
@@ -4,9 +4,9 @@
     ViewData["Title"] = "Create";
 }
 
-<h2>Crear</h2>
+<h2>Create</h2>
 
-<h4>Bodega Clasificacion Tripa</h4>
+<h4>Bodegatripa</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -20,6 +20,16 @@
                 </div>
             </div>
             <div class="form-group">
+                <label asp-for="NumeroPieles" class="control-label"></label>
+                <input asp-for="NumeroPieles" class="form-control" />
+                <span asp-validation-for="NumeroPieles" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="peso" class="control-label"></label>
+                <input asp-for="peso" class="form-control" />
+                <span asp-validation-for="peso" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="DescarneId" class="control-label"></label>
                 <select asp-for="DescarneId" class ="form-control" asp-items="ViewBag.DescarneId"></select>
             </div>
@@ -28,14 +38,19 @@
                 <select asp-for="ClasificacionTripaId" class ="form-control" asp-items="ViewBag.ClasificacionTripaId"></select>
             </div>
             <div class="form-group">
-                <input type="submit" value="Crear" class="btn btn-default" />
+                <label asp-for="Personal" class="control-label"></label>
+                <input asp-for="Personal" class="form-control" />
+                <span asp-validation-for="Personal" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <input type="submit" value="Create" class="btn btn-default" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Regresar a la lista</a>
+    <a asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
