--- a/ServicuerosSA/Views/Bodegatripas/Edit.cshtml
+++ b/ServicuerosSA/Views/Bodegatripas/Edit.cshtml
@@ -21,6 +21,16 @@
                 </div>
             </div>
             <div class="form-group">
+                <label asp-for="NumeroPieles" class="control-label"></label>
+                <input asp-for="NumeroPieles" class="form-control" />
+                <span asp-validation-for="NumeroPieles" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="peso" class="control-label"></label>
+                <input asp-for="peso" class="form-control" />
+                <span asp-validation-for="peso" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="DescarneId" class="control-label"></label>
                 <select asp-for="DescarneId" class="form-control" asp-items="ViewBag.DescarneId"></select>
                 <span asp-validation-for="DescarneId" class="text-danger"></span>
@@ -31,14 +41,19 @@
                 <span asp-validation-for="ClasificacionTripaId" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Guarda" class="btn btn-default" />
+                <label asp-for="Personal" class="control-label"></label>
+                <input asp-for="Personal" class="form-control" />
+                <span asp-validation-for="Personal" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <input type="submit" value="Save" class="btn btn-default" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Regresar a lista</a>
+    <a asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
