--- a/ServicuerosSA/Views/Account/Register.cshtml
+++ b/ServicuerosSA/Views/Account/Register.cshtml
@@ -26,14 +26,13 @@
                 <input asp-for="ConfirmPassword" class="form-control" />
                 <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group dropdown">
                 <label asp-for="Roles"></label>
-                <div class="col-md-10">
                     @Html.DropDownList("Rol", new SelectList(Model.Roles,"Text","Text"), new { @class = "form-control"})
-                </div>
-                
             </div>
-            <button type="submit" class="btn btn-default">Register</button>
+            <div class="form-group">
+                    <button type="submit" class="btn btn-default">Register</button>
+            </div>
         </form>
     </div>
 </div>
