--- a/ServicuerosSA/Views/Pelambres/Index.cshtml
+++ b/ServicuerosSA/Views/Pelambres/Index.cshtml
@@ -189,7 +189,7 @@
             </div>
 
             <div class="modal-body" id="impresion">
-                
+
 
                 <div class="modal-body" id="areaImprimir">
 
@@ -287,20 +287,42 @@
                         </table>
 
                     </div>
-                    <div class="form-group" >
-                        <table class="table table-bordered"  >
-                            <thead >
-                                <tr >
-                                    <td style="font-size:xx-small" colspan="6" align="center"> Elaborado por: <br/>Carlos Sanchez <br/> Tecnico TFL  </td> 
-                                    <td style="font-size:xx-small" colspan="6" align="center"> Revisado por: <br/>Veronica Vinueza <br/> Coor.Calidad y Medio Ambiente</td>
-                                    <td style="font-size:xx-small" colspan="6" align="center"> Aprobado por: <br/> Econ. Francisco Herdoíza <br/> Gerente General </td>
+                    <div class="form-group">
+                        <table class="table table-bordered">
+                            <thead>
+                                <tr>
+                                    <td style="font-size:xx-small" colspan="6" align="center"> Elaborado por: <br />Carlos Sanchez <br /> Tecnico TFL  </td>
+                                    <td style="font-size:xx-small" colspan="6" align="center"> Revisado por: <br />Veronica Vinueza <br /> Coor.Calidad y Medio Ambiente</td>
+                                    <td style="font-size:xx-small" colspan="6" align="center"> Aprobado por: <br /> Econ. Francisco Herdoíza <br /> Gerente General </td>
                                 </tr>
 
                             </thead>
 
-                            </table>
-                       </div>
+                        </table>
                     </div>
+                </div>
+                <div class="form-group">
+                    <table class="table table-bordered">
+                        <thead>
+                            <tr>
+                                <td style="font-size:xx-small" colspan="6" align="center"> Bombo  </td>
+
+                                <td style="font-size:xx-small" colspan="6" align="center"> Cantidad </td>
+
+                                <td style="font-size:xx-small" colspan="6" align="center"> Seleccion </td>
+
+                                <td style="font-size:xx-small" colspan="6" align="center"> Peso(Kg) </td>
+
+                                <td style="font-size:xx-small" colspan="6" align="center"> Fecha </td>
+
+                                <td style="font-size:xx-small" colspan="6" align="center"> Bodega Nº </td>
+                            </tr>
+
+                        </thead>
+
+                    </table>
+                </div>
+            </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
                         <button type="button" class="btn btn-primary" onclick="Impresion('areaImprimir');">Imprimir</button>
@@ -308,10 +330,7 @@
                 </div>
                 </div>
             </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
-                <button type="button" class="btn btn-primary" onclick="Impresion('areaImprimir');" >Imprimir</button>
-            </div>
+            
         </div>
 
     
