--- a/ServicuerosSA/Views/Shared/_Layout.cshtml
+++ b/ServicuerosSA/Views/Shared/_Layout.cshtml
@@ -64,7 +64,7 @@
                             <li class="divider"></li>
                             <li><a asp-area="" asp-controller="Descarnes" asp-action="Index">4.- Descarne</a></li>
                             <li class="divider"></li>
-                            <li><a asp-area="" asp-controller="ClasificacionTripas" asp-action="Index">5.-Clasificacion Tripa</a></li>
+                            <li><a asp-area="" asp-controller="BodegaTripas" asp-action="Index">5.-Clasificacion de tripa </a></li>
                             <li class="divider"></li>
                         </ul>
                     </li>
@@ -85,7 +85,7 @@
                                 <li class="divider"></li>
                                 <li><a asp-area="" asp-controller="Medidas" asp-action="Index">Medidas</a></li>
                                 <li class="divider"></li>
-                                <li><a asp-area="" asp-controller="BodegaTripas" asp-action="Index">Bodega Tripa</a></li>
+                                <li><a asp-area="" asp-controller="Clasificaciontripas" asp-action="Index">Clasificacion en tripa</a></li>
                                 <li class="divider"></li>
                                 <li><a asp-area="" asp-controller="Tipobodegas" asp-action="Index">Tipo de Bodegas</a></li>
                                 <li class="divider"></li>
