--- a/ServicuerosSA/Views/ClasificacionTripas/Create.cshtml
+++ b/ServicuerosSA/Views/ClasificacionTripas/Create.cshtml
@@ -4,9 +4,10 @@
     ViewData["Title"] = "Create";
 }
 
-<h2>Create</h2>
 
-<h4>ClasificacionTripa</h4>
+<h2>Clasificacion Tripa</h2>
+
+<h4>Crear una nuevo tipo de clasificacion</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -18,14 +19,14 @@
                 <span asp-validation-for="Detalle" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Crear" class="btn btn-default" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Regresar a la Lista</a>
 </div>
 
 @section Scripts {
