--- a/ServicuerosSA/Views/ClasificacionTripas/Index.cshtml
+++ b/ServicuerosSA/Views/ClasificacionTripas/Index.cshtml
@@ -4,10 +4,10 @@
     ViewData["Title"] = "Index";
 }
 
-<h2>Index</h2>
+<h2>Lista en tripa</h2>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Ingreso una nueva calsificacion</a>
 </p>
 <table class="table">
     <thead>
