--- a/ServicuerosSA/Views/Bodegatripas/Index.cshtml
+++ b/ServicuerosSA/Views/Bodegatripas/Index.cshtml
@@ -27,7 +27,7 @@
     </thead>
     <tbody id="BodegaTripa"> </tbody>
 </table>
-<div class="modal fade" id="IngresoBodegTripa" tabindex="-1" role="dialog" aria-labelledby="EtiquetaModal">
+<div class="modal fade" id="IngresoClasificacionTripa" tabindex="-1" role="dialog" aria-labelledby="EtiquetaModal">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
@@ -44,11 +44,13 @@
                 <form>
                     <div class="form-group">
                         <label class="control-label">Numero de Pieles</label>
-                        <label id="NumeroPielesInput" name="NumeroPielesInput" class="control-label" ></label>
+                        <br />
+                        <input id="NumeroPielesInput" name="NumeroPielesInput" class="control-label">
                     </div>
                     <div class="form-group">
                         <label class="control-label">Peso</label>
-                        <label id="PesoInput" name="PesoInput" class="control-label " ></label>                        
+                        <br />
+                        <input id="PesoInput" name="PesoInput" class="control-label " >                      
                     </div>
                     <div class="form-group">
                         <label class="control-label">Personal</label>
