--- a/ServicuerosSA/Views/Pelambres/Index.cshtml
+++ b/ServicuerosSA/Views/Pelambres/Index.cshtml
@@ -301,36 +301,80 @@
                         </table>
                     </div>
                 </div>
+
                 <div class="form-group">
                     <table class="table table-bordered">
-                        <thead>
-                            <tr>
-                                <td style="font-size:xx-small" colspan="6" align="center"> Bombo  </td>
-
-                                <td style="font-size:xx-small" colspan="6" align="center"> Cantidad </td>
-
-                                <td style="font-size:xx-small" colspan="6" align="center"> Seleccion </td>
-
-                                <td style="font-size:xx-small" colspan="6" align="center"> Peso(Kg) </td>
-
-                                <td style="font-size:xx-small" colspan="6" align="center"> Fecha </td>
-
-                                <td style="font-size:xx-small" colspan="6" align="center"> Bodega Nº </td>
-                            </tr>
-
-                        </thead>
-
+                        <tr>
+                            <td style="font-size:x-small" colspan="4">PESAJE DE PRODUCTO QUIMICO</td>
+                        </tr>
+                        <tr>
+                            <td class="auto-style13" colspan="4"></td>
+                        </tr>
+                        <tr>
+                            <td style="font-size:x-small" colspan="4">PELAMBRE FRESCO S/PD BORRON DL</td>
+                        </tr>
+                        <tr>
+                            @*<td class="auto-style9"></td>
+                            <td class="auto-style10"></td>
+                            <td class="auto-style11"></td>
+                            <td class="auto-style12"></td>*@
+                        </tr>
+                        <tr>
+                            <td style="font-size:xx-small">FECHA:</td>
+                            <td style="font-size:xx-small">&nbsp;</td>
+                            <td style="font-size:xx-small">FECHA:</td>
+                            <td style="font-size:xx-small">PROCESADOR POR:</td>
+                        </tr>
+                        <tr>
+                            <td style="font-size:xx-small">LOTE:</td>
+                            <td style="font-size:xx-small">&nbsp;</td>
+                            <td style="font-size:xx-small">PAGINA:</td>
+                            <td style="font-size:xx-small">2</td>
+                        </tr>
+                        <tr>
+                            <td style="font-size:xx-small">BOMBO:</td>
+                            <td style="font-size:xx-small">&nbsp;</td>
+                            <td style="font-size:xx-small">&nbsp;</td>
+                            <td style="font-size:xx-small">&nbsp;</td>
+                        </tr>
+                        <tr>
+                            <td style="font-size:xx-small">PESO:</td>
+                            <td style="font-size:xx-small">&nbsp;</td>
+                            <td style="font-size:xx-small">&nbsp;</td>
+                            <td style="font-size:xx-small">&nbsp;</td>
+                        </tr>
+                        <tr>
+                            <td style="font-size:xx-small">PIELES:</td>
+                            <td style="font-size:xx-small">&nbsp;</td>
+                            <td style="font-size:xx-small">&nbsp;</td>
+                            <td style="font-size:xx-small">&nbsp;</td>
+                        </tr>
+                        <tr>
+                            <td style="font-size:xx-small">PROMEDIO:</td>
+                            <td style="font-size:xx-small">&nbsp;</td>
+                            <td style="font-size:xx-small">&nbsp;</td>
+                            <td style="font-size:xx-small">&nbsp;</td>
+                        </tr>
+                        <tr>
+                            <td style="font-size:xx-small">&nbsp;</td>
+                            <td style="font-size:xx-small">&nbsp;</td>
+                            <td style="font-size:xx-small">&nbsp;</td>
+                            <td style="font-size:xx-small">&nbsp;</td>
+                        </tr>
+                        <tr>
+                            <td style="font-size:x-small" colspan="2">PRODUCTO</td>
+                            <td style="font-size:x-small">%</td>
+                            <td style="font-size:x-small">CANTIDAD</td>
+                        </tr>
                     </table>
                 </div>
-            </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
-                        <button type="button" class="btn btn-primary" onclick="Impresion('areaImprimir');">Imprimir</button>
-                    </div>
-                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
+                    <button type="button" class="btn btn-primary" onclick="Impresion('areaImprimir');">Imprimir</button>
                 </div>
             </div>
-            
         </div>
+    </div>
+ 
 
     
