--- a/ServicuerosSA/Views/Componentes/Details.cshtml
+++ b/ServicuerosSA/Views/Componentes/Details.cshtml
@@ -23,6 +23,12 @@
             @Html.DisplayFor(model => model.Porcentaje)
         </dd>
         <dt>
+            @Html.DisplayNameFor(model => model.Quimico)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.Quimico)
+        </dd>
+        <dt>
             @Html.DisplayNameFor(model => model.Tiempo)
         </dt>
         <dd>
