--- a/ServicuerosSA/Views/Pelambres/Index.cshtml
+++ b/ServicuerosSA/Views/Pelambres/Index.cshtml
@@ -301,7 +301,7 @@
                         </table>
                     </div>
                 </div>
-
+                @* Hoja de pesaje *@
                 <div class="form-group">
                     <table class="table table-bordered">
                         <tr>
@@ -314,14 +314,8 @@
                             <td style="font-size:x-small" colspan="4">PELAMBRE FRESCO S/PD BORRON DL</td>
                         </tr>
                         <tr>
-                            @*<td class="auto-style9"></td>
-                            <td class="auto-style10"></td>
-                            <td class="auto-style11"></td>
-                            <td class="auto-style12"></td>*@
-                        </tr>
-                        <tr>
                             <td style="font-size:xx-small">FECHA:</td>
-                            <td style="font-size:xx-small">&nbsp;</td>
+                            <td style="font-size:xx-small">&nbsp;<label id="fecha" name="fecha" class="control-label"></label></td>
                             <td style="font-size:xx-small">FECHA:</td>
                             <td style="font-size:xx-small">PROCESADOR POR:</td>
                         </tr>
