--- a/ServicuerosSA/Views/Componentes/Edit.cshtml
+++ b/ServicuerosSA/Views/Componentes/Edit.cshtml
@@ -24,6 +24,13 @@
                 <span asp-validation-for="Porcentaje" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <div class="checkbox">
+                    <label>
+                        <input asp-for="Quimico" /> @Html.DisplayNameFor(model => model.Quimico)
+                    </label>
+                </div>
+            </div>
+            <div class="form-group">
                 <label asp-for="Tiempo" class="control-label"></label>
                 <input asp-for="Tiempo" class="form-control" />
                 <span asp-validation-for="Tiempo" class="text-danger"></span>
