--- a/ServicuerosSA/Views/Componentes/Index.cshtml
+++ b/ServicuerosSA/Views/Componentes/Index.cshtml
@@ -19,6 +19,9 @@
                     @Html.DisplayNameFor(model => model.Porcentaje)
                 </th>
                 <th>
+                    @Html.DisplayNameFor(model => model.Quimico)
+                </th>
+                <th>
                     @Html.DisplayNameFor(model => model.Tiempo)
                 </th>
             <th>
@@ -38,6 +41,9 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Porcentaje)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Quimico)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Tiempo)
